--- a/angularElements/angular.json
+++ b/angularElements/angular.json
@@ -25,11 +25,7 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": [
-              {
-                "input": "node_modules/document-register-element/build/document-register-element.js"
-              }
-            ]
+            "scripts": []
           },
           "configurations": {
             "production": {
